--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha ./tests/ -R list",
-    "nodemon": "nodemon ./bin/www"
+    "test": "mocha ./tests/ -R list"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "debug": "~2.6.3",
     "express": "~4.15.2",
-    "morgan": "~1.8.1",
-    "pug": "~2.0.0-beta11"
+    "morgan": "~1.8.1"
   },
   "devDependencies": {
     "chai": "^4.0.2",
